--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -18,8 +18,7 @@
             <th>電子郵件</th>
             <th>LINE</th>
             <th>業務負責人</th>
-            <th>檢視</th>
-            <th>編輯</th>
+            <th>更多</th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-lead>
@@ -39,17 +38,20 @@
             <td>{{ lead.email }}</td>
             <td>{{ lead.line }}</td>
             <td>{{ lead.owner }}</td>
-            <td>
-              <p-button icon="pi pi-eye" routerLink="/main/lead/view"
-                        styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
-            </td>
-            <td>
-              <p-button (click)="showDialog('edit',lead)" icon="pi pi-pencil"
-                        styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
-            </td>
+            <td><p-button icon="pi pi-ellipsis-h" (click)="menu.toggle($event);getLead(lead)"
+                          styleClass="p-button-rounded p-button-secondary p-button-text"></p-button></td>
+<!--            <td>-->
+<!--              <p-button icon="pi pi-eye" routerLink="/main/lead/view"-->
+<!--                        styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>-->
+<!--            </td>-->
+<!--            <td>-->
+<!--              <p-button (click)="showDialog('edit',lead)" icon="pi pi-pencil"-->
+<!--                        styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>-->
+<!--            </td>-->
           </tr>
         </ng-template>
       </p-table>
+      <p-menu #menu [model]="items" [popup]="true"></p-menu>
       <div class="flex align-items-center mt-3 ml-4">
         <span class="text-400 pi pi-circle-fill mr-1"></span>
         <span>{{stage[0].name}}</span>
