--- a/src/app/views/features/lead/lead.component.scss
+++ b/src/app/views/features/lead/lead.component.scss
@@ -4,3 +4,23 @@ input[formControlName="owner"] {
   color: black;
   margin-left: -9px;
 }
+input[formControlName="created_by"] {
+  border: none;
+  color: black;
+  margin-left: -9px;
+}
+input[formControlName="updated_by"] {
+  border: none;
+  color: black;
+  margin-left: -9px;
+}
+input[formControlName="created_at"] {
+  border: none;
+  color: black;
+  margin-left: -9px;
+}
+input[formControlName="updated_at"] {
+  border: none;
+  color: black;
+  margin-left: -9px;
+}
