--- a/src/app/views/components/login/login.component.html
+++ b/src/app/views/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="flex justify-content-center">
   <div class="col-10">
-    <h1 class="mb-4">CRM系統</h1>
+    <h1 class="mb-4">顧客關係管理(CRM)</h1>
     <p-divider></p-divider>
     <div class="flex justify-content-center mt-5">
       <p-card>
