--- a/src/app/views/features/report/report.component.html
+++ b/src/app/views/features/report/report.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<h1>待完成</h1>
+<!-- <div class="container">
   <div class="row mb-5">
     <p-card>
       <span>
@@ -66,4 +67,4 @@
       <p-button label="取消" (click)="visible2" styleClass="p-button-secondary ms-1"></p-button>
     </div>
   </div>
-</p-dialog>
+</p-dialog> -->
