--- a/src/app/views/features/report/report.component.scss
+++ b/src/app/views/features/report/report.component.scss
@@ -1,8 +1,2 @@
-@import 'src/app/app.component.scss';
-label{
-  margin-top: 5px;
-}
+//@import 'src/app/app.component.scss';
 
-input{
-  margin-top: 10px;
-}
