--- a/src/app/views/features/forecasting/forecasting.component.html
+++ b/src/app/views/features/forecasting/forecasting.component.html
@@ -1,4 +1,5 @@
-<div class="container">
+<h1>待完成</h1>
+<!-- <div class="container">
   <div class="row mb-5">
     <div class="mt-3 mb-3">
       <p-card>
@@ -75,4 +76,4 @@
       <p-button label="取消" (click)="visible = false" styleClass="p-button-secondary ms-1"></p-button>
     </div>
   </div>
-</p-dialog>
+</p-dialog> -->
