--- a/src/app/views/features/product/product.component.html
+++ b/src/app/views/features/product/product.component.html
@@ -1,19 +1,19 @@
 <div class="flex justify-content-center">
   <div class="col-10">
     <p-card>
-      <h2>產品</h2>
+      <h2>商品</h2>
       <div class="flex justify-content-end">
         <span class="p-buttonset">
-          <p-button label="新增產品" (click)="showDialog('add')" icon="pi pi-plus" styleClass="p-button-text"></p-button>
+          <p-button (click)="showDialog('add')" icon="pi pi-plus" styleClass="p-button-text"></p-button>
         </span>
       </div>
       <p-table [value]="product">
         <ng-template pTemplate="header">
           <tr>
-            <th>產品名稱</th>
-            <th>產品代碼</th>
-            <th>產品描述</th>
-            <th>產品系列</th>
+            <th>名稱</th>
+            <th>代碼</th>
+            <th>描述</th>
+            <!-- <th>系列</th> -->
             <th></th>
           </tr>
         </ng-template>
@@ -22,15 +22,16 @@
             <td>{{ product.name }}</td>
             <td>{{ product.code }}</td>
             <td>{{ product.describe }}</td>
-            <td>{{ product.series }}</td>
-            <td>
-              <p-button icon="pi pi-ellipsis-h" (click)="menu.toggle($event)"
-                        styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+            <!-- <td>{{ product.series }}</td> -->
+            <td><p-button icon="pi pi-eye" styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+              <p-button (click)="showDialog('edit',product)" icon="pi pi-pencil"
+                styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+                <p-button icon="pi pi-trash"
+                styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
             </td>
           </tr>
         </ng-template>
       </p-table>
-      <p-menu #menu [model]="items" [popup]="true"></p-menu>
     </p-card>
   </div>
 </div>
@@ -39,7 +40,7 @@
     <div class="grid">
       <div class="col-6">
         <div class="field">
-          <label><span class="required-star">*</span>產品名稱</label>
+          <label><span class="required-star">*</span>商品名稱</label>
           <input pInputText formControlName="name"
             [ngClass]="{'ng-dirty':product_form.controls['name'].hasError && product_form.controls['name'].touched}">
         </div>
@@ -53,14 +54,14 @@
       </div>
       <!-- <div class="col-6">
         <div class="field">
-          <label>產品系列</label>
+          <label>系列</label>
           <p-dropdown placeholder="請選擇" [disabled]="true" optionLabel="name" formControlName="series"
             appendTo="body"></p-dropdown>
         </div>
       </div> -->
       <div class="col-6">
         <div class="field">
-          <label>產品代碼</label>
+          <label>代碼</label>
           <input pInputText formControlName="code">
         </div>
       </div>
@@ -73,7 +74,7 @@
       </div> -->
       <div class="col-12">
         <div class="field">
-          <label>產品描述</label>
+          <label>描述</label>
           <textarea [rows]="5" pInputTextarea formControlName="describe"></textarea>
         </div>
       </div>
