style: table icon到最右邊

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -44,6 +44,9 @@ p-card {
       border-bottom-left-radius: 10px;
     }
   }
+  .p-datatable .p-datatable-tbody>tr>td.icon-align-right {
+    text-align: right !important;
+  }
 }
 
 p-checkbox {
