--- a/src/app/views/features/order/order.component.html
+++ b/src/app/views/features/order/order.component.html
@@ -27,7 +27,7 @@
             <td>{{ order.start_date }}</td>
             <td>{{ order.status }}</td>
             <td>{{ order.contract_number }}</td>
-            <td><p-button icon="pi pi-eye" styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+            <td class="icon-align-right"><p-button icon="pi pi-eye" styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
               <p-button (click)="showDialog('edit',order)" icon="pi pi-pencil"
                 styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
                 <p-button icon="pi pi-trash"
