style: product table icon到最右邊

--- a/src/app/views/features/product/product.component.html
+++ b/src/app/views/features/product/product.component.html
@@ -23,7 +23,7 @@
             <td>{{ product.code }}</td>
             <td>{{ product.describe }}</td>
             <!-- <td>{{ product.series }}</td> -->
-            <td><p-button icon="pi pi-eye" styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+            <td class="icon-align-right"><p-button icon="pi pi-eye" styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
               <p-button (click)="showDialog('edit',product)" icon="pi pi-pencil"
                 styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
                 <p-button icon="pi pi-trash"
