fix: 更改欄位名稱 company_name

--- a/src/app/views/features/lead/lead.component.html
+++ b/src/app/views/features/lead/lead.component.html
@@ -92,8 +92,8 @@
       <div class="col-12">
         <div class="field">
           <label><span class="text-red-600">*</span>公司</label>
-          <input pInputText formControlName="account_name"
-                 [ngClass]="{'ng-dirty':lead_form.controls['account_name'].hasError && lead_form.controls['account_name'].touched}">
+          <input pInputText formControlName="company_name"
+                 [ngClass]="{'ng-dirty':lead_form.controls['company_name'].hasError && lead_form.controls['company_name'].touched}">
         </div>
       </div>
       <div class="col-6">
