--- a/src/app/views/features/quote/quote.component.html
+++ b/src/app/views/features/quote/quote.component.html
@@ -4,31 +4,35 @@
       <h2>報價</h2>
       <div class="flex justify-content-end">
         <span class="p-buttonset">
-          <p-button (click)="showDialog('add')" label="新增報價" icon="pi pi-plus" styleClass="p-button-text"></p-button>
+          <p-button (click)="showDialog('add')" icon="pi pi-plus" styleClass="p-button-text"></p-button>
         </span>
       </div>
       <p-table [value]="quote">
         <ng-template pTemplate="header">
           <tr>
-            <th>報價名稱</th>
-            <th>商機名稱</th>
-            <th>正在同步化</th>
-            <th>到期日期</th>
-            <th>小計</th>
-            <th>總價</th>
-            <th>編輯</th>
+            <th pSortableColumn="name">名稱<p-sortIcon field="name"></p-sortIcon></th>
+            <th pSortableColumn="opportunity_name">商機名稱<p-sortIcon field="opportunity_name"></p-sortIcon></th>
+            <th pSortableColumn="syncing">正在同步化<p-sortIcon field="syncing"></p-sortIcon></th>
+            <th pSortableColumn="expiration_date">到期日期<p-sortIcon field="expiration_date"></p-sortIcon></th>
+            <th pSortableColumn="subtotal">小計<p-sortIcon field="subtotal"></p-sortIcon></th>
+            <th pSortableColumn="total_price">總價<p-sortIcon field="total_price"></p-sortIcon></th>
+            <th></th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-quote>
           <tr>
-            <td>{{ quote.quote_name }}</td>
+            <td>{{ quote.name }}</td>
             <td>{{ quote.opportunity_name }}</td>
             <td>{{ quote.syncing }}</td>
             <td>{{ quote.expiration_date }}</td>
             <td>{{ quote.subtotal }}</td>
             <td>{{ quote.total_price }}</td>
-            <td><p-button (click)="showDialog('edit',quote)" icon="pi pi-pencil"
-                styleClass="p-button-rounded p-button-secondary p-button-outlined"></p-button></td>
+            <td class="icon-align-right"><p-button icon="pi pi-eye" styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+              <p-button (click)="showDialog('edit',quote)" icon="pi pi-pencil"
+                styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+                <p-button icon="pi pi-trash"
+                styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+            </td>
           </tr>
         </ng-template>
       </p-table>
@@ -40,8 +44,14 @@
     <div class="grid">
       <div class="col-6">
         <div class="field">
-          <label>報價名稱</label>
-          <input pInputText formControlName="quote_name">
+          <label>編號</label>
+          <input pInputText formControlName="number">
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="field">
+          <label><span class="required-star">*</span>名稱</label>
+          <input pInputText formControlName="name"  [ngClass]="{'ng-dirty':quote_form.controls['name'].hasError && quote_form.controls['name'].touched}">
         </div>
       </div>
       <div class="col-6">
@@ -52,8 +62,35 @@
       </div>
       <div class="col-6">
         <div class="field">
-          <label>正在同步化</label>
-          <input pInputText formControlName="syncing">
+          <label>帳戶名稱</label>
+          <input pInputText formControlName="account_name">
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="field">
+          <label>與商機同步化</label>
+          <br>
+          <p-checkbox formControlName="syncing" value="syncing" [binary]="true"></p-checkbox>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="field" *ngIf="quote_form.get('syncing')?.value">
+          <label>同步的商機</label>
+          <p-dropdown placeholder="請選擇" [disabled]="true"
+          formControlName="opportunity" appendTo="body"></p-dropdown>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="field">
+          <label>狀態</label>
+          <p-dropdown placeholder="請選擇" [disabled]="true" [options]="status" optionLabel="name" formControlName="status"
+            appendTo="body"></p-dropdown>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="field">
+          <label>產品描述</label>
+          <textarea [rows]="5" pInputTextarea formControlName="describe"></textarea>
         </div>
       </div>
       <div class="col-6">
@@ -65,14 +102,55 @@
       <div class="col-6">
         <div class="field">
           <label>小計</label>
-          <input pInputText formControlName="subtotal">
+          <br>
+          <p-inputNumber [style]="{'width':'100%'}" formControlName="subtotal" mode="currency" currency="USD" locale="en-US" [minFractionDigits]="2"> </p-inputNumber>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="field">
+          <label>稅額</label>
+          <br>
+          <p-inputNumber [style]="{'width':'100%'}" formControlName="tax" mode="currency" currency="USD" locale="en-US" [minFractionDigits]="2"> </p-inputNumber>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="field">
+          <label>折扣</label>
+          <br>
+          <p-inputNumber [style]="{'width':'100%'}" formControlName="discount" suffix="%" [minFractionDigits]="2"></p-inputNumber>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="field">
+          <label>運輸處理</label>
+          <br>
+          <p-inputNumber [style]="{'width':'100%'}" formControlName="shipping_and_handling" suffix="%" [minFractionDigits]="2"></p-inputNumber>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
           <label>總價</label>
-          <input pInputText formControlName="total_price">
+          <br>
+          <p-inputNumber [style]="{'width':'100%'}"  formControlName="total_price" mode="currency" currency="USD" locale="en-US" [minFractionDigits]="2"> </p-inputNumber>
         </div>
+      </div>
+      <div class="col-6">
+        <label>建立者：</label>
+      </div>
+      <div class="col-6">
+        <label>上次修改者：</label>
+      </div>
+      <div class="col-1">
+        <input pInputText formControlName="created_by">
+      </div>
+      <div class="col-5">
+        <input pInputText formControlName="created_at">
+      </div>
+      <div class="col-1">
+        <input pInputText formControlName="updated_by">
+      </div>
+      <div class="col-5">
+        <input pInputText formControlName="updated_at">
       </div>
     </div>
     <div class="flex justify-content-end">
