--- a/src/app/views/features/product/product.component.html
+++ b/src/app/views/features/product/product.component.html
@@ -10,9 +10,9 @@
       <p-table [value]="product">
         <ng-template pTemplate="header">
           <tr>
-            <th>名稱</th>
-            <th>代碼</th>
-            <th>描述</th>
+            <th pSortableColumn="name">名稱<p-sortIcon field="name"></p-sortIcon></th>
+            <th pSortableColumn="code">代碼<p-sortIcon field="code"></p-sortIcon></th>
+            <th pSortableColumn="describe">描述<p-sortIcon field="describe"></p-sortIcon></th>
             <!-- <th>系列</th> -->
             <th></th>
           </tr>
