--- a/src/app/views/features/campaign/campaign.component.html
+++ b/src/app/views/features/campaign/campaign.component.html
@@ -1,25 +1,24 @@
-<div class="container">
-  <div class="row">
+<div class="flex justify-content-center">
+  <div class="col-10">
     <p-card>
-      <span>
-        <h3>行銷活動</h3>
-        <div class="d-flex flex-row-reverse bd-highlight">
-          <div class="p-2 bd-highlight"><p-button label="新增" (click)="showDialog('add')" icon="pi pi-plus"
-              styleClass="p-button-text"></p-button></div>
-        </div>
-      </span>
+      <h2>行銷活動</h2>
+      <div class="flex justify-content-end">
+        <span class="p-buttonset">
+          <p-button (click)="showDialog('add')" icon="pi pi-plus" styleClass="p-button-text"></p-button>
+        </span>
+      </div>
       {{campaign_table ? campaign_table.length : 0 }}個項目
       <p-table [value]="campaign_table" [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5, 10, 15]">
         <ng-template pTemplate="header">
           <tr>
-            <th>行銷活動名稱</th>
-            <th>父系行銷活動</th>
-            <th>類型</th>
-            <th>狀態</th>
-            <th>開始時間</th>
-            <th>結束時間</th>
-            <th>行銷活動中的回應</th>
-            <th>擁有者別名</th>
+            <th pSortableColumn="name">活動名稱<p-sortIcon field="name"></p-sortIcon></th>
+            <th pSortableColumn="patrilineal_name">父系活動<p-sortIcon field="patrilineal_name"></p-sortIcon></th>
+            <th pSortableColumn="type">類型<p-sortIcon field="type"></p-sortIcon></th>
+            <th pSortableColumn="status">狀態<p-sortIcon field="status"></p-sortIcon></th>
+            <th pSortableColumn="start_date">開始時間<p-sortIcon field="start_date"></p-sortIcon></th>
+            <th pSortableColumn="end_date">結束時間<p-sortIcon field="end_date"></p-sortIcon></th>
+            <th pSortableColumn="responses">回應個數<p-sortIcon field="responses"></p-sortIcon></th>
+            <th pSortableColumn="owner">業務負責人<p-sortIcon field="owner"></p-sortIcon></th>
             <th></th>
           </tr>
         </ng-template>
@@ -33,85 +32,112 @@
             <td>{{ campaign.end_date }}</td>
             <td>{{ campaign.responses }}</td>
             <td>{{ campaign.owner }}</td>
-            <td><p-button icon="pi pi-bookmark" (click)="menu.toggle($event)"
+            <td class="icon-align-right"><p-button icon="pi pi-eye"
                 styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+              <p-button (click)="showDialog('edit',campaign)" icon="pi pi-pencil"
+                styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+              <p-button icon="pi pi-trash" styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
             </td>
           </tr>
         </ng-template>
       </p-table>
-      <p-menu #menu [model]="items" [popup]="true"></p-menu>
     </p-card>
   </div>
 </div>
 <!-- p-dialog -->
-<form [formGroup]="compaign_form">
+<form [formGroup]="campaign_form">
   <p-dialog [(visible)]="visible" header={{dialogHeader}}>
-    <div class="container">
-      <div class="row">
-        <strong>行銷活動資訊</strong>
-        <div class="col-6">
-          <label>行銷活動名稱</label>
-          <input type="text" pInputText formControlName="name">
+    <div class="grid">
+      <div class="col-6">
+        <div class="field">
+          <label><span class="required-star">*</span>活動名稱</label>
+          <input type="text" pInputText formControlName="name"
+            [ngClass]="{'ng-dirty':campaign_form.controls['name'].hasError && campaign_form.controls['name'].touched}">
         </div>
-        <div class="col-6">
-          <label>行銷活動擁有者</label>
-          <br>
-          {{campaign.owner}}
+      </div>
+      <div class="col-6">
+        <div class="field">
+          <label>業務負責人</label>
+          <input type="text" pInputText formControlName="owner">
         </div>
-        <div class="col-6">
+      </div>
+      <div class="col-6">
+        <div class="field">
           <label>啟用</label>
           <br>
-          <p-checkbox formControlName="enable" value="enable"></p-checkbox>
+          <p-checkbox formControlName="enable" value="enable" [binary]="true"></p-checkbox>
         </div>
-        <div class="col-6">
+      </div>
+      <div class="col-6">
+        <div class="field">
           <label>狀態</label>
-          <p-dropdown [editable]="true" [options]="status" formControlName="status"></p-dropdown>
+          <p-dropdown placeholder="請選擇" [disabled]="true" appendTo="body" [options]="status" formControlName="status"
+            optionLabel="name"></p-dropdown>
         </div>
-        <div class="col-6">
+      </div>
+      <div class="col-6">
+        <div class="field">
           <label>父系行銷活動</label>
-          <br>
-          <p-dropdown formControlName="patrilineal_name"></p-dropdown>
+          <p-dropdown placeholder="請選擇" [disabled]="true" appendTo="body"
+            formControlName="patrilineal_name"></p-dropdown>
         </div>
-        <div class="col-6">
+      </div>
+      <div class="col-6">
+        <div class="field">
           <label>類型</label>
-          <p-dropdown [editable]="true" [options]="type" formControlName="type"></p-dropdown>
+          <p-dropdown placeholder="請選擇" [disabled]="true" appendTo="body" [options]="type" formControlName="type"
+            optionLabel="name"></p-dropdown>
         </div>
-        <div class="col-6">
+      </div>
+      <div class="col-6">
+        <div class="field">
           <label>開始日期</label>
           <p-calendar [appendTo]="'body'" dateFormat="yy-mm-dd" [showButtonBar]="true"
             formControlName="start_date"></p-calendar>
         </div>
-        <div class="col-6">
+      </div>
+      <div class="col-6">
+        <div class="field">
           <label>結束日期</label>
-          <p-calendar [appendTo]="'body'" dateFormat="yy-mm-dd" [showButtonBar]="true"
-            formControlName="end_date"></p-calendar>
+          <p-calendar [appendTo]="'body'" dateFormat="yy-mm-dd" [showButtonBar]="true" formControlName="end_date"
+            [minDate]="campaign_form.controls['start_date'].value"></p-calendar>
         </div>
-        <div class="col-12">
+      </div>
+      <div class="col-12">
+        <div class="field">
           <label>描述</label>
           <textarea rows="5" pInputTextarea formControlName="description"></textarea>
         </div>
-        <strong>計畫</strong>
-        <div class="col-6">
-          <label>行銷活動中的已傳送數目</label>
+      </div>
+      <div class="col-6">
+        <div class="field">
+          <label>已傳送數目</label>
           <input type="text" pInputText formControlName="sent" />
         </div>
-        <div class="col-6">
-          <label>行銷活動中的預算成本</label>
+      </div>
+      <div class="col-6">
+        <div class="field">
+          <label>預算成本</label>
           <input type="text" pInputText formControlName="budget_cost" />
         </div>
-        <div class="col-6">
+      </div>
+      <div class="col-6">
+        <div class="field">
           <label>預期回應 (%)</label>
           <br>
-          <p-inputNumber  inputId="percent" formControlName="responses" suffix="%"> </p-inputNumber>
+          <p-inputNumber [style]="{'width':'100%'}" inputId="percent" formControlName="responses" suffix="%"> </p-inputNumber>
         </div>
-        <div class="col-6">
-          <label>行銷活動中的實際成本</label>
+      </div>
+      <div class="col-6">
+        <div class="field">
+          <label>實際成本</label>
           <input type="text" pInputText formControlName="actual_cost" />
         </div>
-        <div class="d-flex flex-row-reverse bd-highlight">
-          <div class="col-6 p-2 bd-highlight"><label>行銷活動中的預期收入</label>
-            <input type="text" pInputText formControlName="expected_income" />
-          </div>
+      </div>
+      <div class="col-6">
+        <div class="field">
+          <label>預期收入</label>
+          <input type="text" pInputText formControlName="expected_income" />
         </div>
       </div>
     </div>
