--- a/src/app/views/features/quote/quote.component.html
+++ b/src/app/views/features/quote/quote.component.html
@@ -103,35 +103,35 @@
         <div class="field">
           <label>小計</label>
           <br>
-          <p-inputNumber [style]="{'width':'100%'}" formControlName="subtotal" mode="currency" currency="USD" locale="en-US" [minFractionDigits]="2"> </p-inputNumber>
+          <p-inputNumber class="w-full" formControlName="subtotal" mode="currency" currency="USD" locale="en-US" [minFractionDigits]="2"> </p-inputNumber>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
           <label>稅額</label>
           <br>
-          <p-inputNumber [style]="{'width':'100%'}" formControlName="tax" mode="currency" currency="USD" locale="en-US" [minFractionDigits]="2"> </p-inputNumber>
+          <p-inputNumber class="w-full"  formControlName="tax" mode="currency" currency="USD" locale="en-US" [minFractionDigits]="2"> </p-inputNumber>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
           <label>折扣</label>
           <br>
-          <p-inputNumber [style]="{'width':'100%'}" formControlName="discount" suffix="%" [minFractionDigits]="2"></p-inputNumber>
+          <p-inputNumber class="w-full"  formControlName="discount" suffix="%" [minFractionDigits]="2"></p-inputNumber>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
           <label>運輸處理</label>
           <br>
-          <p-inputNumber [style]="{'width':'100%'}" formControlName="shipping_and_handling" suffix="%" [minFractionDigits]="2"></p-inputNumber>
+          <p-inputNumber class="w-full" formControlName="shipping_and_handling" suffix="%" [minFractionDigits]="2"></p-inputNumber>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
           <label>總價</label>
           <br>
-          <p-inputNumber [style]="{'width':'100%'}"  formControlName="total_price" mode="currency" currency="USD" locale="en-US" [minFractionDigits]="2"> </p-inputNumber>
+          <p-inputNumber class="w-full"  formControlName="total_price" mode="currency" currency="USD" locale="en-US" [minFractionDigits]="2"> </p-inputNumber>
         </div>
       </div>
       <div class="col-6">
