--- a/src/app/views/components/login/login.component.html
+++ b/src/app/views/components/login/login.component.html
@@ -25,7 +25,7 @@
             </div>
             <div class="col-6">
               <div class="flex justify-content-end align-items-center mt-3">
-                <p-button label="登入" routerLink="/main" (click)="onSubmit()"></p-button>
+                <p-button label="登入" (click)="onSubmit()"></p-button>
               </div>
             </div>
           </div>
