feat: 帳密驗證導入頁面

--- a/src/app/views/components/login/login.component.html
+++ b/src/app/views/components/login/login.component.html
@@ -3,7 +3,6 @@
     <h1 class="mb-4">顧客關係管理(CRM)</h1>
     <p-divider></p-divider>
     <div class="flex justify-content-center mt-5">
-      <form [formGroup]="login_form">
         <p-card>
           <h3>登入</h3>
           <p-divider></p-divider>
@@ -11,12 +10,12 @@
             <div class="col-12">
               <div class="field">
                 <label>帳號</label>
-                <input pInputText formControlName="user_name">
+                <input pInputText [(ngModel)]="form.username">
               </div>
             </div>
             <div class="col-12 mt-1">
               <label>密碼</label>
-              <p-password formControlName="password" [feedback]="false"></p-password>
+              <p-password [(ngModel)]="form.password" [feedback]="false"></p-password>
             </div>
             <div class="col-6">
               <div class="flex justify-content-start mt-3">
@@ -38,7 +37,6 @@
                       icon="pi pi-arrow-right" iconPos="right"></p-button>
           </div>
         </p-card>
-      </form>
     </div>
   </div>
 </div>
