--- a/src/app/views/features/product/product.component.html
+++ b/src/app/views/features/product/product.component.html
@@ -11,7 +11,7 @@
         <ng-template pTemplate="header">
           <tr>
             <th pSortableColumn="name">名稱<p-sortIcon field="name"></p-sortIcon></th>
-            <th pSortableColumn="code">代碼<p-sortIcon field="code"></p-sortIcon></th>
+            <th pSortableColumn="code">識別碼<p-sortIcon field="code"></p-sortIcon></th>
             <th pSortableColumn="describe">描述<p-sortIcon field="describe"></p-sortIcon></th>
             <!-- <th>系列</th> -->
             <th></th>
@@ -61,7 +61,7 @@
       </div> -->
       <div class="col-6">
         <div class="field">
-          <label>代碼</label>
+          <label>識別碼</label>
           <input pInputText formControlName="code">
         </div>
       </div>
